--- a/css/main.css
+++ b/css/main.css
@@ -20,11 +20,12 @@ a {
 
 header {
   width: 100%;
-  height: 80px;
+  height: 60px;
+  background: white;
 }
 
 .h-section {
-  height: 80px;
+  height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -33,19 +34,57 @@ header {
 
 .header-menu .menu {
   display: flex;
-  height: 80px;
+  height: 40px;
   align-items: center;
   cursor: pointer;
+  justify-content: center;
+  background: white;
 }
 
-.header-menu .menu li {
+.header-menu .menu > li {
   font-size: 18px;
   font-weight: 400;
   color: #434242;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 20px;
 }
 
-.header-menu .menu li + li{
-  margin-left: 40px;
+.menu > li:hover .sub-menu {
+  display: block;
+}
+
+.menu > li > a {
+  padding: 8px 16px;
+}
+.sub-menu {
+  border: 3px solid black;
+  position: absolute;
+  padding: 8px 0px;
+  white-space: nowrap; /* 줄바꿈 안함 */
+  z-index: 9;
+  top: 60px;
+  display: none;
+  background: white;
+}
+
+.sub-menu li {
+  padding: 8px;
+  margin: 0;
+}
+
+.sub-menu li:hover > a > span {
+  border-bottom: 3px solid #000;
+  transition: border-bottom .8s ease;
+}
+
+.sub-menu li > a > span {
+  border-bottom: 3px solid transparent;
+}
+
+.sub-menu > li > a {
+  padding: 12px 22px;
 }
 
 .utility .menu {
@@ -712,7 +751,6 @@ section {
   box-sizing: border-box;
   justify-content: space-between;
   flex-wrap: wrap;
-
 }
 
 .text-top {
@@ -727,6 +765,7 @@ section {
   display: flex;
   resize: none;
   padding: 30px;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 
@@ -739,6 +778,7 @@ section {
   resize: none;
   padding: 30px;
   background: #F8F8F8;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 .con-7-text > .btn-5 {
@@ -753,9 +793,118 @@ section {
 } */
 
 footer {
+  width: 100%;
   height: 500px;
-  background: cornflowerblue;
+  background: black;
   margin: 0 auto;
+}
+
+footer .inner {
+  height: 500px;
+  margin: 0 auto; 
+}
+
+.footer-section {
+  display: flex;
+  justify-content: center;
+}
+
+.footer-left {
+  display: flex;
+  flex-direction: column;
+  flex: 4;
+  justify-content: center;
+  gap: 30px;
+}
+
+.footer-left > h1 {
+  font-size: 32px;
+  color: #fff;
+  font-weight: bold;
+  text-align: left;
+  line-height: 36px;
+}
+
+.footer-left > p {
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+  color: #8f8f8f;
+}
+
+.input-group {
+  display: flex;
+  gap: 10px;
+}
+
+.input-group .f-left {
+  width: 260px;
+  height: 30px;
+  background: #d9d9d9;
+  padding: 5px;
+  border: none;
+}
+
+.input-group .f-left:focus {
+  border: none;
+}
+
+.input-group .f-right {
+  width: 80px;
+  height: 40px;
+  background: #FCB33B;
+  padding: 0;
+  border: none;
+  border-radius: 5px;
+  font-size: 14px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.footer-right {
+  flex: 5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 150px;
+}
+
+.footer-right .f-menu {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.footer-right .f-menu a {
+  color: #d9d9d9;
+}
+
+.footer-right .f-menu a:hover {
+  color: #fff;
+}
+
+.footer-right .f-utility {
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+  gap: 50px;
+}
+
+.footer-right .f-utility li {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+}
+
+.footer-right .f-utility a {
+  color: #fff;
+}
+
+.sns {
+  display: flex;
+  gap: 20px;
+  color: #FCB33B;
+  cursor: pointer;
 }
 
 /* 스크롤 이벤트(SCROLL TO TOP) */
@@ -808,3 +957,16 @@ footer {
   height: 12px;
   background: #FCB33B;
 }
+
+.practice {
+  height: 150px;
+  margin: 20px auto;
+  overflow: hidden;
+}
+
+.practice .swiper-slide img {
+  width: 100%;
+  height: 100%;
+}
+
+
