--- a/css/반응형.css
+++ b/css/반응형.css
@@ -5,6 +5,7 @@ body {
 
 a {
   text-decoration: none;
+  color: #000;
 }
 
 a:visited {
@@ -13,10 +14,16 @@ a:visited {
 
 .h-section {
   width: 100%;
-  height: 100px;
+  height: 80px;
   position: fixed;
   background: #fff;
+  background-color: rgba(255, 255, 255, 0.8);
   z-index: 2;
+  transition: .5s;
+}
+
+.h-section:hover {
+  background: #fff;
 }
 .header-top {
   margin: 0 auto;
@@ -35,7 +42,7 @@ a:visited {
 .header-main {
   width: 90%;
   margin: 0 auto;
-  height: 70px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -57,6 +64,19 @@ a:visited {
   color: #111;
 }
 
+/* 콘텐츠1영역 */
+
+.scroll {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  background: rgb(213, 211, 211);
+  bottom: 2%;
+  left: 50%;
+  right: 50%;
+  z-index: 2;
+}
+
 .con-1 {
   width: 100%;
   background-size: cover;
@@ -68,8 +88,40 @@ a:visited {
   height: 100%;
 }
 
-.slide-con1 {
-  background: coral;
+.slide-inner {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-between;
+  /* background: black; */
+}
+
+
+.slide-bg {
+  width: 800px;
+  height: 550px;
+  background: url(http://ecudemo223390.cafe24.com/_moho/img/main/main-banner01.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  border-radius: 0 300px 300px 0;  
+}
+
+.slide-txt {
+  width: 550px;
+  height: 600px;
+  background: rgb(178, 178, 178);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+
+.btn {
+  width: 240px;
+  height: 40px;
 }
 
 .slide-con2 {
@@ -81,7 +133,7 @@ a:visited {
 }
 
 .con-2 {
-    width: 100%;
+  width: 100%;
   background: url(/img/bg-1\ \(2\).jpg);
   background-size: cover;
   background-position: center;
@@ -98,3 +150,31 @@ a:visited {
   background-size: cover;
   background-position: center;
 }
+
+.animated-title {
+  font-size:60px; 
+  position: relative; 
+  width: 100%;
+  max-width:100%; 
+  height: auto; 
+  padding:100px 0; 
+  overflow-x: hidden; 
+  overflow-y: hidden; 
+  font-weight: bold;
+  top: 770px;
+  position: absolute;
+  z-index: 3;
+}
+.animated-title .track {
+  position: absolute; 
+  white-space: nowrap;
+  will-change: transform;
+  animation: marquee 60s linear infinite; }
+
+@keyframes marquee {
+  from { transform: translateX(0); }
+  to { transform: translateX(-50%); }
+}
+@media (hover: hover) and (min-width: 700px){
+.animated-title .content {-webkit-transform: translateY(calc(100% - 8rem)); transform: translateY(calc(100% - 8rem));}
+    }
