--- a/css/반응형.css
+++ b/css/반응형.css
@@ -17,7 +17,6 @@ a:visited {
   height: 80px;
   position: fixed;
   background: #fff;
-  background-color: rgba(255, 255, 255, 0.8);
   z-index: 2;
   transition: .5s;
 }
@@ -28,7 +27,7 @@ a:visited {
 .header-top {
   margin: 0 auto;
   width: 90%;
-  height: 30px;
+  height: 20px;
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -37,12 +36,13 @@ a:visited {
 .header-top .utility {
   display: flex;
   gap: 20px;
+  font-size: 0.8rem;
 }
 
 .header-main {
   width: 90%;
   margin: 0 auto;
-  height: 50px;
+  height: 60px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -59,23 +59,12 @@ a:visited {
 }
 
 .nav li a {
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: bold;
   color: #111;
 }
 
 /* 콘텐츠1영역 */
-
-.scroll {
-  width: 100px;
-  height: 100px;
-  position: absolute;
-  background: rgb(213, 211, 211);
-  bottom: 2%;
-  left: 50%;
-  right: 50%;
-  z-index: 2;
-}
 
 .con-1 {
   width: 100%;
@@ -83,61 +72,69 @@ a:visited {
   background-position: center;
 }
 
+.container{
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  }
+
+.line {
+  width: 70%;
+  height: 70px;
+  position: relative;
+  overflow: hidden;
+} 
+
+span{
+  position: absolute;
+  font-size: 3rem;
+  line-height: 4.2rem;
+}
+
 .swiper {
   width: 100%;
   height: 100%;
 }
 
-.slide-inner {
+.inner {
   display: flex;
   width: 100%;
   height: 100%;
   display: inline-flex;
   align-items: center;
   justify-content: space-between;
-  /* background: black; */
+  background: rgb(0, 0, 0);
+  background: url(/video/toropical.mp4);
 }
 
-
-.slide-bg {
+.con-1-bg {
   width: 800px;
   height: 550px;
-  background: url(http://ecudemo223390.cafe24.com/_moho/img/main/main-banner01.jpg) no-repeat;
+  background: url(/img/main-banner01.jpg) no-repeat;
   background-size: cover;
   background-position: center;
   border-radius: 0 300px 300px 0;  
 }
 
-.slide-txt {
-  width: 550px;
-  height: 600px;
-  background: rgb(178, 178, 178);
-  color: white;
+.con-1-right {
+  width: 800px;
+  height: 500px;
   display: flex;
-  flex-direction: column;
   justify-content: center;
+  flex-direction: column;
+  gap: 30px;
 }
 
-
-.btn {
-  width: 240px;
-  height: 40px;
-}
-
-.slide-con2 {
-  background: rgb(124, 255, 80);
-}
-
-.slide-con3 {
-  background: rgb(29, 92, 238);
-}
 
 .con-2 {
   width: 100%;
-  background: url(/img/bg-1\ \(2\).jpg);
+  /* background: url(/img/bg-1\ \(2\).jpg); */
   background-size: cover;
   background-position: center;
 }
+
 .con-3 {
     width: 100%;
   background: url(/img/bg-1\ \(3\).jpg);
@@ -151,9 +148,11 @@ a:visited {
   background-position: center;
 }
 
+
+/* 타이틀  */
 .animated-title {
   font-size:60px; 
-  position: relative; 
+  position: absolute; 
   width: 100%;
   max-width:100%; 
   height: auto; 
@@ -161,12 +160,14 @@ a:visited {
   overflow-x: hidden; 
   overflow-y: hidden; 
   font-weight: bold;
-  top: 770px;
+  bottom: 5%;
   position: absolute;
   z-index: 3;
+  color: rgb(0, 0, 0);
 }
 .animated-title .track {
   position: absolute; 
+  /* bottom: 20px; */
   white-space: nowrap;
   will-change: transform;
   animation: marquee 60s linear infinite; }
@@ -178,3 +179,180 @@ a:visited {
 @media (hover: hover) and (min-width: 700px){
 .animated-title .content {-webkit-transform: translateY(calc(100% - 8rem)); transform: translateY(calc(100% - 8rem));}
     }
+
+/* 스크롤 다운 */
+.scroll {
+  margin: 0 auto;
+  width: 24px;
+  height: 100px;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  right: 1%;
+  bottom: 0;
+  justify-content: space-between;
+}
+
+.arrows {
+  height: 40px;
+}
+
+.m_scroll_arrows
+{
+  display: block;
+  width: 5px;
+  height: 5px;
+  -ms-transform: rotate(45deg); /* IE 9 */
+  -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+  transform: rotate(45deg);
+  border-right: 2px solid rgb(0, 0, 0);
+  border-bottom: 2px solid rgb(0, 0, 0);
+  margin: 0 0 3px 4px;
+  width: 16px;
+  height: 16px;
+}
+
+.unu
+{
+  margin-top: 1px;
+}
+
+.unu, .doi, .trei
+{
+    -webkit-animation: mouse-scroll 1s infinite;
+    -moz-animation: mouse-scroll 1s infinite;
+    animation: mouse-scroll 1s infinite;
+  
+}
+
+.unu
+{
+  -webkit-animation-delay: .1s;
+  -moz-animation-delay: .1s;
+  -webkit-animation-direction: alternate;
+  
+  animation-direction: alternate;
+  animation-delay: alternate;
+}
+
+.doi
+{
+  -webkit-animation-delay: .2s;
+  -moz-animation-delay: .2s;
+  -webkit-animation-direction: alternate;
+  
+  animation-delay: .2s;
+  animation-direction: alternate;
+  
+  margin-top: -6px;
+}
+
+.trei
+{
+  -webkit-animation-delay: .3s;
+  -moz-animation-delay: .3s;
+  -webkit-animation-direction: alternate;
+  animation-delay: .3s;
+  animation-direction: alternate;
+  margin-top: -6px;
+}
+
+/* .scroll mouse */
+
+.mouse {
+  height: 42px;
+  width: 24px;
+  border-radius: 14px;
+  transform: none;
+  border: 2px solid rgb(0, 0, 0);
+  /* top: 170px; */
+}
+
+.wheel {
+  height: 5px;
+  width: 2px;
+  display: block;
+  margin: 5px auto;
+  background: rgb(0, 0, 0);
+  position: relative;
+  height: 4px;
+  width: 4px;
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 8px;
+  -webkit-border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.wheel {
+  -webkit-animation: mouse-wheel 0.6s linear infinite;
+  -moz-animation: mouse-wheel 0.6s linear infinite;
+  animation: mouse-wheel 0.6s linear infinite;
+}
+
+@-webkit-keyframes mouse-wheel{
+  0% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  100% {
+    opacity: 0;
+    -webkit-transform: translateY(6px);
+    -ms-transform: translateY(6px);
+    transform: translateY(6px);
+  }
+}
+@-moz-keyframes mouse-wheel {
+  0% { top: 1px; }
+  25% { top: 2px; }
+  50% { top: 3px;}
+  75% { top: 2px;}
+  100% { top: 1px;}
+}
+@-o-keyframes mouse-wheel {
+
+  0% { top: 1px; }
+  25% { top: 2px; }
+  50% { top: 3px;}
+  75% { top: 2px;}
+  100% { top: 1px;}
+}
+@keyframes mouse-wheel {
+
+  0% { top: 1px; }
+  25% { top: 2px; }
+  50% { top: 3px;}
+  75% { top: 2px;}
+  100% { top: 1px;}
+}
+
+@-webkit-keyframes mouse-scroll {
+
+  0%   { opacity: 0;}
+  50%  { opacity: .5;}
+  100% { opacity: 1;}
+}
+@-moz-keyframes mouse-scroll {
+
+  0%   { opacity: 0; }
+  50%  { opacity: .5; }
+  100% { opacity: 1; }
+}
+@-o-keyframes mouse-scroll {
+
+  0%   { opacity: 0; }
+  50%  { opacity: .5; }
+  100% { opacity: 1; }
+}
+@keyframes mouse-scroll {
+
+  0%   { opacity: 0; }
+  50%  { opacity: .5; }
+  100% { opacity: 1; }
+}
+
